# elevator-algorithm

./: app.py  elevator.py  main.py  models.py  pyproject.toml  utils.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/components/: elevator.tsx
client/src/components/state/: context.tsx  reducer.ts  reducer.tsx
client/src/components/ui/: elevatorUpdatesBox.tsx  floorInputGrid.tsx  userFloorSelect.tsx
server/: app.py  elevator.py  pyproject.toml
