[tool.poetry]
name = "elevator-algorithm"
version = "0.1.0"
description = "algorithm that simulates a general purpose elevator"
authors = ["Akash NP <akashnp1998@gmail.com>"]
readme = "README.md"
packages = [{include = "elevator_algorithm"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
